--- a/Views/OrderEquipmentDetails/OrderEquipmentDetails.cshtml
+++ b/Views/OrderEquipmentDetails/OrderEquipmentDetails.cshtml
@@ -258,7 +258,7 @@
                     <div class="details-container-data-row-underlined">
                         <span>Кількість:</span>
                         <span style="display: flex; gap: 5px; justify-content: center;">
-                            @Html.ActionLink("—", "OrderEquipmentRemove", "OrderEquipmentRemove", new { EntityId = Model.OrderPosition.OrderId, EquipmentOrderPositionId = Model.OrderPosition.EquipmentOrderPositionId, ActionName = "OrderEquipmentDetails", ControllerName = "OrderEquipmentDetails"}, new { @class="action-link-symbol" })
+                            @Html.ActionLink("-", "OrderEquipmentRemove", "OrderEquipmentRemove", new { EntityId = Model.OrderPosition.OrderId, EquipmentOrderPositionId = Model.OrderPosition.EquipmentOrderPositionId, ActionName = "OrderEquipmentDetails", ControllerName = "OrderEquipmentDetails"}, new { @class="action-link-symbol" })
                             @Model.OrderPosition.Quantity шт
                             @Html.ActionLink("+", "OrderEquipmentAdd", "OrderEquipmentAdd", new { EntityId = Model.OrderPosition.OrderId, EquipmentOrderPositionId = Model.OrderPosition.EquipmentOrderPositionId, ActionName = "OrderEquipmentDetails", ControllerName = "OrderEquipmentDetails"}, new { @class = "action-link-symbol" })
                             (Взято з складів @Model.QuantityWareHouse шт)
