--- a/Views/OrderList/OrderList.cshtml
+++ b/Views/OrderList/OrderList.cshtml
@@ -1,5 +1,6 @@
 ﻿@using CRMEngSystem.Models.ViewModels.Order
 @using CRMEngSystem.Models.ViewModels.Notify
+@using CRMEngSystem.Models.ViewModels.Resizer
 @model OrderListViewModel
 
 <head>
@@ -21,6 +22,7 @@
             grid-template-columns: 8% 33% 10% 18% 17% calc(14% - 13px);
             padding-right: 13px;
             overflow: hidden;
+            position: relative;
         }
 
         .header-part-column {
@@ -121,13 +123,6 @@
         .visible {
             opacity: 1;
         }
-
-        .resizer {
-            cursor: col-resize;
-            width: 13px;
-            height: 17px;
-            margin-left: 7px;
-        }
     </style>
 </head>
 <body>
@@ -204,52 +199,22 @@
                         };
                     }
                     <div class="header-part-column">
-                        <span>
-                            Код
-                            @Html.ActionLink("↓", "OrderList", "OrderList", CreateViewModelWithSort(true, null, null, null))
-                        </span>
-                        <svg class="resizer" viewBox="0 0 34 40" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M10.9429 11.0572L2.74293 19.2572C2.64267 19.3532 2.56289 19.4685 2.50839 19.5962C2.45388 19.7238 2.42578 19.8612 2.42578 20C2.42578 20.1388 2.45388 20.2762 2.50839 20.4039C2.56289 20.5315 2.64267 20.6469 2.74293 20.7429L10.9429 28.9429M23.0572 11.0572L27.1572 15.1572L31.2572 19.2572C31.3575 19.3532 31.4373 19.4685 31.4918 19.5962C31.5463 19.7238 31.5744 19.8612 31.5744 20C31.5744 20.1388 31.5463 20.2762 31.4918 20.4039C31.4373 20.5315 31.3575 20.6469 31.2572 20.7429L23.0572 28.9429M17.0001 38.5714V1.42859" stroke="#595586" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
-                        </svg>
+                        @await Html.PartialAsync("_Resizer", new ResizerViewModel { TitleName = "Код", SortActionName = "OrderList", SortControllerName = "OrderList", SortRouteValues = CreateViewModelWithSort(true, null, null, null) })
                     </div>
                     <div class="header-part-column">
-                        <span>
-                            Підприємство
-                            @Html.ActionLink("↓", "OrderList", "OrderList", CreateViewModelWithSort(null, true, null, null))
-                        </span>
-                        <svg class="resizer" viewBox="0 0 34 40" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M10.9429 11.0572L2.74293 19.2572C2.64267 19.3532 2.56289 19.4685 2.50839 19.5962C2.45388 19.7238 2.42578 19.8612 2.42578 20C2.42578 20.1388 2.45388 20.2762 2.50839 20.4039C2.56289 20.5315 2.64267 20.6469 2.74293 20.7429L10.9429 28.9429M23.0572 11.0572L27.1572 15.1572L31.2572 19.2572C31.3575 19.3532 31.4373 19.4685 31.4918 19.5962C31.5463 19.7238 31.5744 19.8612 31.5744 20C31.5744 20.1388 31.5463 20.2762 31.4918 20.4039C31.4373 20.5315 31.3575 20.6469 31.2572 20.7429L23.0572 28.9429M17.0001 38.5714V1.42859" stroke="#595586" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
-                        </svg>
+                        @await Html.PartialAsync("_Resizer", new ResizerViewModel { TitleName = "Підприємство", SortActionName = "OrderList", SortControllerName = "OrderList", SortRouteValues = CreateViewModelWithSort(null, true, null, null) })
                     </div>
                     <div class="header-part-column">
-                        <span>
-                            Пріорітет
-                            @Html.ActionLink("↓", "OrderList", "OrderList", CreateViewModelWithSort(null, null, true, null))
-                        </span>
-                        <svg class="resizer" viewBox="0 0 34 40" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M10.9429 11.0572L2.74293 19.2572C2.64267 19.3532 2.56289 19.4685 2.50839 19.5962C2.45388 19.7238 2.42578 19.8612 2.42578 20C2.42578 20.1388 2.45388 20.2762 2.50839 20.4039C2.56289 20.5315 2.64267 20.6469 2.74293 20.7429L10.9429 28.9429M23.0572 11.0572L27.1572 15.1572L31.2572 19.2572C31.3575 19.3532 31.4373 19.4685 31.4918 19.5962C31.5463 19.7238 31.5744 19.8612 31.5744 20C31.5744 20.1388 31.5463 20.2762 31.4918 20.4039C31.4373 20.5315 31.3575 20.6469 31.2572 20.7429L23.0572 28.9429M17.0001 38.5714V1.42859" stroke="#595586" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
-                        </svg>
+                        @await Html.PartialAsync("_Resizer", new ResizerViewModel { TitleName = "Пріорітет", SortActionName = "OrderList", SortControllerName = "OrderList", SortRouteValues = CreateViewModelWithSort(null, null, true, null) })
                     </div>
                     <div class="header-part-column">
-                        <span>Ініціатор</span>
-                        <svg class="resizer" viewBox="0 0 34 40" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M10.9429 11.0572L2.74293 19.2572C2.64267 19.3532 2.56289 19.4685 2.50839 19.5962C2.45388 19.7238 2.42578 19.8612 2.42578 20C2.42578 20.1388 2.45388 20.2762 2.50839 20.4039C2.56289 20.5315 2.64267 20.6469 2.74293 20.7429L10.9429 28.9429M23.0572 11.0572L27.1572 15.1572L31.2572 19.2572C31.3575 19.3532 31.4373 19.4685 31.4918 19.5962C31.5463 19.7238 31.5744 19.8612 31.5744 20C31.5744 20.1388 31.5463 20.2762 31.4918 20.4039C31.4373 20.5315 31.3575 20.6469 31.2572 20.7429L23.0572 28.9429M17.0001 38.5714V1.42859" stroke="#595586" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
-                        </svg>
+                        @await Html.PartialAsync("_Resizer", new ResizerViewModel { TitleName = "Ініціатор" })
                     </div>
                     <div class="header-part-column">
-                        <span>
-                            Дата створення
-                            @Html.ActionLink("↓", "OrderList", "OrderList", CreateViewModelWithSort(null, null, null, true))
-                        </span>
-                        <svg class="resizer" viewBox="0 0 34 40" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M10.9429 11.0572L2.74293 19.2572C2.64267 19.3532 2.56289 19.4685 2.50839 19.5962C2.45388 19.7238 2.42578 19.8612 2.42578 20C2.42578 20.1388 2.45388 20.2762 2.50839 20.4039C2.56289 20.5315 2.64267 20.6469 2.74293 20.7429L10.9429 28.9429M23.0572 11.0572L27.1572 15.1572L31.2572 19.2572C31.3575 19.3532 31.4373 19.4685 31.4918 19.5962C31.5463 19.7238 31.5744 19.8612 31.5744 20C31.5744 20.1388 31.5463 20.2762 31.4918 20.4039C31.4373 20.5315 31.3575 20.6469 31.2572 20.7429L23.0572 28.9429M17.0001 38.5714V1.42859" stroke="#595586" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
-                        </svg>
+                        @await Html.PartialAsync("_Resizer", new ResizerViewModel { TitleName = "Дата створення", SortActionName = "OrderList", SortControllerName = "OrderList", SortRouteValues = CreateViewModelWithSort(null, null, null, true) })
                     </div>
                     <div class="header-part-column">
-                        <span>Статус</span>
-                        <svg class="resizer" viewBox="0 0 34 40" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M10.9429 11.0572L2.74293 19.2572C2.64267 19.3532 2.56289 19.4685 2.50839 19.5962C2.45388 19.7238 2.42578 19.8612 2.42578 20C2.42578 20.1388 2.45388 20.2762 2.50839 20.4039C2.56289 20.5315 2.64267 20.6469 2.74293 20.7429L10.9429 28.9429M23.0572 11.0572L27.1572 15.1572L31.2572 19.2572C31.3575 19.3532 31.4373 19.4685 31.4918 19.5962C31.5463 19.7238 31.5744 19.8612 31.5744 20C31.5744 20.1388 31.5463 20.2762 31.4918 20.4039C31.4373 20.5315 31.3575 20.6469 31.2572 20.7429L23.0572 28.9429M17.0001 38.5714V1.42859" stroke="#595586" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
-                        </svg>
+                        @await Html.PartialAsync("_Resizer", new ResizerViewModel { TitleName = "Статус" })
                     </div>
                 </div>
                 <div class="header-part">
