--- a/wwwroot/css/enterpriseListStyleSheet.css
+++ b/wwwroot/css/enterpriseListStyleSheet.css
@@ -13,6 +13,7 @@
     grid-template-columns: 40% 15% 20% 15% calc(10% - 13px);
     padding-right: 13px;
     overflow: hidden;
+    position: relative;
 }
 
 .header-part-column {
